--- a/TopCoderTool/TopCoderTool/Views/Home/Index.cshtml
+++ b/TopCoderTool/TopCoderTool/Views/Home/Index.cshtml
@@ -4,13 +4,13 @@
 }
 
 <div class="row">
-   <table>
-       <thead>
+   <table style="border:inset">
+       <thead style ="border:outset;">
            <tr>
-              <td width="100px">Rank#</td>
-              <td width="150px">Handle</td>
-              <td width="120px">Rating</td>
-              <td width="300px">Country</td>
+               <td width="100px">Rank</td>
+               <td width="150px">Handle</td>
+               <td width="120px">Rating</td>
+               <td width="300px">Country</td>
            </tr>
        </thead>
        <tbody>
